--- a/public/index.html
+++ b/public/index.html
@@ -1,149 +1,153 @@
-<!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-    <meta name="description" content="Ich als unabhängiger Freifilmer und Editor erstelle hochqualitativen Content für Ihren Medienauftritt! Meine Arbeitsbereiche umfassen FIlmografie, Animation, Editing und vieles mehr. Kontaktieren Sie mich für ein individuelles Angebot.">
-    <title>Johannes Eifler</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="logos/test.png" type="image/icon type">
-  </head>
-  <body>
-    <div class="logoWrapper">
-      <img id=logo src="" alt="logooooooooo">
-    </div>
-    <div class="bodyWrapper">
-      <section class="bodyInnerWrapper">
-        <div class="arrowWrapper">
-          <svg tabindex="0" alt="picture slide control left" viewBox="0 0 512.002 512.002" class="arrow left dropShadow">>
-            <path d="m 46.9,270.05101 236.816,236.161 c 7.759,7.733 20.321,7.72 28.067,-0.04 7.74,-7.759 7.72,-20.328 -0.04,-28.067 L 89.023,256.00001 311.751,33.895999 c 7.759,-7.74 7.779,-20.301 0.04,-28.0609988 C 307.908,1.945 302.821,0 297.734,0 292.66,0 287.593,1.932 283.717,5.7950002 L 46.9,241.95001 c -3.737,3.718 -5.834,8.778 -5.834,14.05 0,5.272 2.103,10.326 5.834,14.051 z"/>
-          </svg>
-        </div>
-          <article class="presWrapper vid active">
-              <h2 class="presItemHeading">Atemberaubende Filme!</h2>
-              <img class="presItem" src="movies/landingvid.jpg" alt="video">
-              <div class="pButtonWrapper">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
-                Aenean vehicula augue vel est volutpat, ut aliquam ipsum egestas.
-                Donec ex odio, consectetur molestie augue nec, tincidunt suscipit elit.</p>
-                <a class="learnMoreWrapper" href="service.html">
-                  <button class="learnMore buttonScale fixedPos"><span>Mehr erfahren</span><svg viewBox="0 0 477.862 477.862"><path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
-  			c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
-  			v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
-  			c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
-  			c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
-  			c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/></svg></button>
-                </a>
-              </div>
-          </article>
-          <article class="presWrapper images">
-            <h2 class="presItemHeading">Inspirierende Fotos</h2>
-            <img class="presItem" id="presImage" src="images/vid2.jpg" alt="image">
-            <div class="pButtonWrapper">
-              <p>Integer vulputate nisl et erat vehicula, id commodo tortor mollis. Donec fermentum enim ac orci lobortis tincidunt.
-                 Aenean elementum fermentum lacus sit amet convallis. Etiam scelerisque commodo vulputate. Nullam rhoncus dolor
-                 a velit pellentesque euismod. Nulla imperdiet odio diam, quis efficitur libero accumsan at. </p>
-                <a class="learnMoreWrapper" href="service.html">
-                 <button class="learnMore buttonScale">
-                   <span>
-                     Mehr erfahren
-                   </span>
-                   <svg viewBox="0 0 477.862 477.862"><path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
-       c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
-       v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
-       c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
-       c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
-       c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/></svg></button>
-              </a>
-             </div>
-          </article>
-          <article class="presWrapper more">
-            <h2 class="presItemHeading">Noch nicht fündig geworden?</h2>
-            <img class="presItem" src="movies/more.jpg" alt="image">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+        <title>Johannes Eifler</title>
+        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../index.css">
+        <link rel="icon" href="../logos/test.png" type="image/icon type">
+    </head>
+    <body>
+        <div class="logoWrapper">
+            <img id=logo src="" alt="logooooooooo">
+          </div>
+
+        
+
+  <div class="bodyWrapper">
+    <section class="bodyInnerWrapper">
+      <div class="arrowWrapper">
+        <svg tabindex="0" alt="picture slide control left" viewBox="0 0 512.002 512.002" class="arrow left dropShadow">>
+          <path d="m 46.9,270.05101 236.816,236.161 c 7.759,7.733 20.321,7.72 28.067,-0.04 7.74,-7.759 7.72,-20.328 -0.04,-28.067 L 89.023,256.00001 311.751,33.895999 c 7.759,-7.74 7.779,-20.301 0.04,-28.0609988 C 307.908,1.945 302.821,0 297.734,0 292.66,0 287.593,1.932 283.717,5.7950002 L 46.9,241.95001 c -3.737,3.718 -5.834,8.778 -5.834,14.05 0,5.272 2.103,10.326 5.834,14.051 z"/>
+        </svg>
+      </div>
+        <article class="presWrapper vid active">
+            <h2 class="presItemHeading">Atemberaubende Filme!</h2>
+            <img class="presItem" src="movies/landingvid.jpg" alt="video">
             <div class="pButtonWrapper">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
               Aenean vehicula augue vel est volutpat, ut aliquam ipsum egestas.
               Donec ex odio, consectetur molestie augue nec, tincidunt suscipit elit.</p>
               <a class="learnMoreWrapper" href="service.html">
-                <button class="learnMore buttonScale">
-                  <span>Mehr erfahren</span>
-                  <svg viewBox="0 0 477.862 477.862">
-                    <path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
-    			c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
-    			v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
-    			c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
-    			c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
-    			c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/>
-                  </svg>
-                </button>
+                <button class="learnMore buttonScale fixedPos"><span>Mehr erfahren</span><svg viewBox="0 0 477.862 477.862"><path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
+      c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
+      v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
+      c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
+      c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
+      c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/></svg></button>
               </a>
             </div>
-          </article>
-        <div class="arrowWrapper">
-          <svg tabindex="0" alt="picture slide control right" viewBox="0 0 512.002 512.002" class="arrow right dropShadow">
-            <path d="M388.425,241.951L151.609,5.79c-7.759-7.733-20.321-7.72-28.067,0.04c-7.74,7.759-7.72,20.328,0.04,28.067l222.72,222.105
-			L123.574,478.106c-7.759,7.74-7.779,20.301-0.04,28.061c3.883,3.89,8.97,5.835,14.057,5.835c5.074,0,10.141-1.932,14.017-5.795
-			l236.817-236.155c3.737-3.718,5.834-8.778,5.834-14.05S392.156,245.676,388.425,241.951z"/>
-          </svg>
-        </div>
-      </section>
-    </div>
-    <div class="slideDotsWrapper">
-      <span class="circle active dropShadow" id="alpha"></span>
-      <span class="circle dropShadow" id="beta"></span>
-      <span class="circle dropShadow" id="gamma"></span>
-    </div>
-    <footer class="footer">
-      	<span>&#169;2021 Johannes Eifler, Freifilmer | Realisation:
-        <a href="https:github.com/JarlTetrazepam" target="_blank" rel="noreferrer noopener">JT</a></span>
-    </footer>
-    <nav id="navigation" class="noselect">
-      <ul class="navButtons">
-        <a tabindex="1" class="navitem lightBlue" href="index.html" alt="Home">
-          <li>
-              <img class="icon home" src="icons/home.svg"></img>
-              <span>Home</span>
-          </li>
-        </a>
-        <a tabindex="1" class="navitem" href="about.html" alt="Über mich">
-          <li>
-            <img class="icon about" src="icons/about.svg"></img>
-            <span>Über mich</span>
-          </li>
-        </a>
-        <a tabindex="1" class="navitem" href="service.html" alt="Service">
-          <li>
-            <img class="icon service" src="icons/service.svg"></img>
-            <span>Service</span>
-          </li>
-        </a>
-        <a tabindex="1" class="navitem" href="contact.html" alt="Kontakt">
-          <li>
-            <img class="icon contact" src="icons/contact.svg"></img>
-            <span>Kontakt</span>
-          </li>
-        </a>
-      </ul>
-    </nav>
-    <script src="scripts.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-database.js"></script>
-    <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyDdSjNxvHF5plOk-lRCm07Y5DDo8VPTNiA",
-        authDomain: "seife-3082b.firebaseapp.com",
-        databaseURL: "https://seife-3082b-default-rtdb.europe-west1.firebasedatabase.app",
-        projectId: "seife-3082b",
-        storageBucket: "seife-3082b.appspot.com",
-        messagingSenderId: "432701812499",
-        appId: "1:432701812499:web:68b28913a4ba6190b234e6",
-        measurementId: "G-THMDY03PCG"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-    </script>
-  </body>
+        </article>
+        <article class="presWrapper images">
+          <h2 class="presItemHeading">Inspirierende Fotos</h2>
+          <img class="presItem" id="presImage" src="images/vid2.jpg" alt="image">
+          <div class="pButtonWrapper">
+            <p>Integer vulputate nisl et erat vehicula, id commodo tortor mollis. Donec fermentum enim ac orci lobortis tincidunt.
+                Aenean elementum fermentum lacus sit amet convallis. Etiam scelerisque commodo vulputate. Nullam rhoncus dolor
+                a velit pellentesque euismod. Nulla imperdiet odio diam, quis efficitur libero accumsan at. </p>
+              <a class="learnMoreWrapper" href="service.html">
+                <button class="learnMore buttonScale">
+                  <span>
+                    Mehr erfahren
+                  </span>
+                  <svg viewBox="0 0 477.862 477.862"><path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
+      c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
+      v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
+      c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
+      c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
+      c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/></svg></button>
+            </a>
+            </div>
+        </article>
+        <article class="presWrapper more">
+          <h2 class="presItemHeading">Noch nicht fündig geworden?</h2>
+          <img class="presItem" src="movies/more.jpg" alt="image">
+          <div class="pButtonWrapper">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
+            Aenean vehicula augue vel est volutpat, ut aliquam ipsum egestas.
+            Donec ex odio, consectetur molestie augue nec, tincidunt suscipit elit.</p>
+            <a class="learnMoreWrapper" href="service.html">
+              <button class="learnMore buttonScale">
+                <span>Mehr erfahren</span>
+                <svg viewBox="0 0 477.862 477.862">
+                  <path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
+        c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
+        v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
+        c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
+        c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
+        c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/>
+                </svg>
+              </button>
+            </a>
+          </div>
+        </article>
+      <div class="arrowWrapper">
+        <svg tabindex="0" alt="picture slide control right" viewBox="0 0 512.002 512.002" class="arrow right dropShadow">
+          <path d="M388.425,241.951L151.609,5.79c-7.759-7.733-20.321-7.72-28.067,0.04c-7.74,7.759-7.72,20.328,0.04,28.067l222.72,222.105
+    L123.574,478.106c-7.759,7.74-7.779,20.301-0.04,28.061c3.883,3.89,8.97,5.835,14.057,5.835c5.074,0,10.141-1.932,14.017-5.795
+    l236.817-236.155c3.737-3.718,5.834-8.778,5.834-14.05S392.156,245.676,388.425,241.951z"/>
+        </svg>
+      </div>
+    </section>
+  </div>
+  <div class="slideDotsWrapper">
+    <span class="circle active dropShadow" id="alpha"></span>
+    <span class="circle dropShadow" id="beta"></span>
+    <span class="circle dropShadow" id="gamma"></span>
+  </div>
+
+    
+        <footer class="footer">
+            <span>&#169;2021 Johannes Eifler, Freifilmer | Realisation:
+            <a href="https:github.com/JarlTetrazepam" target="_blank" rel="noreferrer noopener">JT</a></span>
+        </footer>
+        <nav id="navigation" class="noselect">
+            <ul class="navButtons">
+                <a tabindex="1" class="navitem" href="/" alt="Home">
+                    <li>
+                        <img class="icon home" src="../icons/home.svg"></img>
+                        <span>Home</span>
+                    </li>
+                </a>
+                <a tabindex="1" class="navitem lightBlue" href="../about" alt="Über mich">
+                    <li>
+                        <img class="icon about" src="../icons/about.svg"></img>
+                        <span>Über mich</span>
+                    </li>
+                </a>
+                <a tabindex="1" class="navitem" href="../service" alt="Service">
+                    <li>
+                        <img class="icon service" src="../icons/service.svg"></img>
+                        <span>Service</span>
+                    </li>
+                </a>
+                <a tabindex="1" class="navitem" href="../contact" alt="Kontakt">
+                    <li>
+                        <img class="icon contact" src="../icons/contact.svg"></img>
+                        <span>Kontakt</span>
+                </li>
+                </a>
+            </ul>
+        </nav>
+        <script src="scripts.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-database.js"></script>
+        <script>
+            const firebaseConfig = {
+                apiKey: "AIzaSyDdSjNxvHF5plOk-lRCm07Y5DDo8VPTNiA",
+                authDomain: "seife-3082b.firebaseapp.com",
+                databaseURL: "https://seife-3082b-default-rtdb.europe-west1.firebasedatabase.app",
+                projectId: "seife-3082b",
+                storageBucket: "seife-3082b.appspot.com",
+                messagingSenderId: "432701812499",
+                appId: "1:432701812499:web:68b28913a4ba6190b234e6",
+                measurementId: "G-THMDY03PCG"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+        </script>
+    </body>
 </html>
